--- a/src/staticfiles/assets/css/vendor.css
+++ b/src/staticfiles/assets/css/vendor.css
@@ -10,6 +10,7 @@
     right: 0px;
     color: white !important;
     background: green;
+    opacity: 1;
     padding: 10px 15px;
     font-size: 16px;
     border-radius: 5px;
@@ -22,9 +23,23 @@
     font-size: 16px;
     margin:0px;
 }
+.openbtn-loading-close{
+    width:25px !important;
+    height:25px !important; 
+    display:none !important;
+    padding-right:5px !important;
+}
+
+.openbtn-loading-open{
+    width:25px !important;
+    height:25px !important; 
+    display:inline-block !important;
+    padding-right:5px !important;
+}
 
 .close-btn{
     /* position: absolute; */
+    opacity: 1 ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,11 +54,20 @@
     animation: close 1.7s cubic-bezier(.5, 0, 1, 1) infinite alternate;
     cursor: pointer;
 }
+
 .close-btn p{
     color: white;
     font-size: 16px;
     margin:0px;
 }
+
+#close-btn-loading{
+    width:25px;
+    height:25px; 
+    display:none;
+    padding-right:5px;
+}
+
 
 @keyframes open {
     50% {
