--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -67,5 +67,7 @@
         <script src="{% static 'assets/js/main.js' %}"></script>
         <!--jquery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+        <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'>
+        
     </body>
 </html>
