--- a/src/staticfiles/assets/css/vendor.css
+++ b/src/staticfiles/assets/css/vendor.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 /* vendor store detail start */
+/*  */
+/* vendor */
+.vendor-img{
+    height:350px; 
+    width:100% !important; 
+    object-fit:cover;
+    border-radius: 10px 0px 0px 10px;
+}
+.vendor-text{
+    padding: 15px 25px 10px 30px !important;
+    background: rgba(41, 212, 206, .1);
+    border-radius: 0 10px 10px 0;
+    /* rgba(249, 170, 52, 0.1) */
+}
+/* vendor end */
 .open-btn{
     /* position: absolute; */
     display: flex;
@@ -127,6 +142,7 @@
         font-size: 12px;
     }
 }
+
 
 .taka-icon{
     height:22px; 
